--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <!-- SearchBox Ends -->
 
         <!-- Features Starts -->
-        <div class="bg-gradient-to-r from-sky-500 to-indigo-500 text-center justify-between rounded-md px-6 pb-4 sm:pb-0 sm:flex items-center">
+        <div class="bg-gradient-to-r from-sky-500 to-indigo-500 text-center justify-between rounded-md px-6 pb-4 mb-4 sm:pb-0 sm:flex items-center">
             <div class="pb-2 sm:pb-0 sm:w-1/2">
                 <img src="../img/feature-img.png" alt="">
             </div>
@@ -51,6 +51,112 @@
         </div>
         <!-- Features Ends -->
 
+        <!-- Filter Starts -->
+        <div class="w-full flex items-center overflow-x-scroll scrollbar-hide mb-4">
+            <a class="flex items-center bg-white p-2 px-4 mr-2 rounded-md shadow hover:bg-[#FFC500]" href="">
+                <box-icon class="shadow-lg rounded-full" name='grid-alt'></box-icon>
+                <p class="font-semibold ml-1">All</p>
+            </a>
+            <a class="flex items-center bg-white p-2 px-4 mr-2 rounded-md shadow hover:bg-[#FFC500]" href="">
+                <i class="fa-solid fa-shirt"></i>
+                <p class="font-semibold ml-1">Fashion</p>
+            </a>
+            <a class="flex items-center bg-white p-2 px-4 mr-2 rounded-md shadow hover:bg-[#FFC500]" href="">
+                <i class="fa-solid fa-hat-cowboy-side"></i>
+                <p class="font-semibold ml-1">Hats</p>
+            </a>
+            <a class="flex items-center bg-white p-2 px-4 mr-2 rounded-md shadow hover:bg-[#FFC500]" href="">
+                <box-icon type='solid' name='watch'></box-icon>
+                <p class="font-semibold ml-1">Watch</p>
+            </a>
+            <a class="flex items-center bg-white p-2 px-4 mr-2 rounded-md shadow hover:bg-[#FFC500]" href="">
+                <i class="fa-solid fa-couch"></i>
+                <p class="font-semibold ml-1">Couch</p>
+            </a>
+        </div>
+        <!-- Filter Ends -->
+
+        <div class="flex items-center justify-between mb-4">
+            <h1 class="text-2xl font-bold">New Arrival</h1>
+            <a class="text-sm" href="#">View all</a>
+        </div>
+
+        <!-- Cards Starts-->
+        <div class="grid grid-cols-2 items-center justify-between overflow-hidden">
+            
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/hoodie.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Hoodie</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/hat.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Beach Hat</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/couch-3.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Two Seat Couch</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/T-shirt.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">T-Shirt</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/pant.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Pant</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center  justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/shirt.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Shirt</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/shoe.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Shoe</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/couch.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Two Seat Couch</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/couch-2.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Three Seat Couch</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2" href="">
+                <img class="bg-slate-100 rounded-lg w-56" src="../img/watch.png" alt="">
+                <div>
+                    <p class="text-xl font-bold mt-2">Watch</p>
+                    <p>$69.69</p>
+                </div>
+            </a>
+        </div>
+
+        <!-- Cards Ends -->
     <!-- Home section Ends Here -->
 </body>
 </html>
