product view added

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!-- Top section ends here -->
 
     <!-- Nav Starts Here -->
-    <nav class="flex items-center justify-between bg-white drop-shadow-md fixed bottom-0 left-0 w-full px-16 py-3 rounded-t-3xl z-10">
+    <nav class="flex items-center justify-between bg-white drop-shadow-md fixed bottom-0 left-0 w-full px-16 py-5 rounded-t-3xl z-10">
         <a class="" href="">
             <i class="fa-solid fa-house hover:text-[#1A9BEA] text-2xl"></i>
         </a>
@@ -103,7 +103,7 @@
 
         <!-- Cards Starts-->
         <div class="mx-8 my-5 max-h-[100vh] grid grid-cols-2 items-center justify-between overflow-scroll scrollbar-hide mb-20">
-            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="">
+            <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="./product-1.html">
                 <img class="bg-slate-100 rounded-lg w-56" src="../img/hoodie.png" alt="">
                 <div>
                     <p class="text-xl font-bold mt-2">Hoodie</p>
