--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <a class="bg-white rounded-full p-2 flex items-center shadow-xl hover:shadow-2xl" href="">
             <box-icon name='menu-alt-left'></box-icon>
         </a>
-        <a class="bg-white rounded-full p-2 flex items-center shadow-xl hover:shadow-2xl relative" href="">
+        <a class="bg-white rounded-full p-2 flex items-center shadow-xl hover:shadow-2xl relative" href="./cart.html">
             <box-icon class="bg-white rounded-full" type='solid' name='cart-download'></box-icon>
             <p class="font-semibold bg-red-700 px-1 rounded-full text-xs text-white absolute top-0 -right-1">2</p>
         </a>
@@ -28,7 +28,7 @@
 
     <!-- Nav Starts Here -->
     <nav class="flex items-center justify-between bg-white drop-shadow-md fixed bottom-0 left-0 w-full px-16 py-5 rounded-t-3xl z-10">
-        <a class="" href="">
+        <a class="" href="./index.html">
             <i class="fa-solid fa-house hover:text-[#1A9BEA] text-2xl"></i>
         </a>
 
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Cards Starts-->
-        <div class="mx-8 my-5 max-h-[100vh] grid grid-cols-2 items-center justify-between overflow-scroll scrollbar-hide mb-20">
+        <div class="mx-8 my-5 max-h-[50vh] grid grid-cols-2 items-center justify-between overflow-scroll scrollbar-hide mb-20">
             <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="./product-1.html">
                 <img class="bg-slate-100 rounded-lg w-56" src="../img/hoodie.png" alt="">
                 <div>
@@ -120,7 +120,7 @@
             <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="">
                 <img class="bg-slate-100 rounded-lg w-56" src="../img/couch-3.png" alt="">
                 <div>
-                    <p class="text-xl font-bold mt-2">Two Seat Couch</p>
+                    <p class="text-xl font-bold mt-2">Couch</p>
                     <p>$69.69</p>
                 </div>
             </a>
@@ -155,14 +155,14 @@
             <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="">
                 <img class="bg-slate-100 rounded-lg w-56" src="../img/couch.png" alt="">
                 <div>
-                    <p class="text-xl font-bold mt-2">Two Seat Couch</p>
+                    <p class="text-xl font-bold mt-2">Couch</p>
                     <p>$69.69</p>
                 </div>
             </a>
             <a class="flex flex-col items-center justify-around font-semibold text-center bg-white rounded-lg p-2 m-2 mx-2 relative" href="">
                 <img class="bg-slate-100 rounded-lg w-56" src="../img/couch-2.png" alt="">
                 <div>
-                    <p class="text-xl font-bold mt-2">Three Seat Couch</p>
+                    <p class="text-xl font-bold mt-2">Couch</p>
                     <p>$69.69</p>
                 </div>
             </a>
