--- a/src/product-1.html
+++ b/src/product-1.html
@@ -27,7 +27,7 @@
 
                         <!-- Nav Starts Here -->
         <nav class="flex items-center justify-between bg-white drop-shadow-md fixed bottom-0 left-0 w-full px-16 py-5 rounded-t-3xl z-10">
-            <a class="" href="">
+            <a class="" href="./index.html">
                 <i class="fa-solid fa-house hover:text-[#1A9BEA] text-2xl"></i>
             </a>
 
@@ -59,7 +59,7 @@
                 <a href="">
                     <img class="" src="../img/hoodie.png" alt="">
                 </a>
-                <i class="fa-solid fa-check absolute top-8 left-8"></i>
+                <i class="fa-solid fa-check p-1 rounded-full bg-white absolute top-7 left-7"></i>
             </div>
             <div class="w-20 p-1.5 bg-white rounded-lg">
                 <a href="">
@@ -95,11 +95,11 @@
     </div>
 
     <div class="mx-8 flex justify-evenly font-semibold mb-20">
-        <a class="flex items-center gap-x-0.5 py-2 px-16 rounded-md ring-2 ring-slate-400 hover:bg-slate-400 hover:ring-slate-400" href="">
+        <a class="flex items-center gap-x-0.5 py-2 px-4 rounded-md ring-2 ring-slate-400 hover:bg-slate-400 hover:ring-slate-400" href="">
             <i class="fa-solid fa-cart-plus"></i>
             <p>Add to Cart</p>
         </a>
-        <a class="flex items-center py-2 px-20 rounded-md ring-2 ring-[#FFC500] bg-[#FFC500] hover:bg-slate-400 hover:ring-slate-400" href="">
+        <a class="flex items-center py-2 px-8 rounded-md ring-2 ring-[#FFC500] bg-[#FFC500] hover:bg-slate-400 hover:ring-slate-400" href="">
             <p>Buy Now</p>
         </a>
     </div>
